--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Установить приложение</h1>
-  <a href="itms-services://?action=download-manifest&url=https://example.com/manifest.plist">
+  <a href="itms-services://?action=download-manifest&url=https://myctechteam.github.io/myctechteam/app/app.ipa">
     <button>Установить</button>
   </a>
 </body>
